--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <div id="root"></div>
 
-  <script type="text/javascript" src="build/bundle.js"> </script>
+  <!-- <script type="text/javascript" src="build/bundle.js"> </script> -->
+   <script type="text/javascript" src="/public/bundle.js"></script>
 
 </body>
 </html>
